--- a/COMP4400-Cov-ID/css/style.css
+++ b/COMP4400-Cov-ID/css/style.css
@@ -1,5 +1,6 @@
 body {
-  background-color: #333333;
+  /*background-color: #333333;*/
+  background-image: url("../images/devUse/COVID19_1920x1200.jpg");
 }
 
 .wrapper {
@@ -40,7 +41,7 @@ p {
 nav {
   width: 100%;
   height: 60px;
-  background-color: #111111;
+  /*background-color: #111111;*/
 }
 
 nav .wrapper {
@@ -78,8 +79,9 @@ nav ul li a:hover {
 }
 
 section {
-  background-color: #fff;
-  width: 94%;
+  /*background-color: #fff;*/
+  /*width: 94%;*/
+  width: 70%;
   padding: 20px 3%;
 }
 
@@ -106,9 +108,13 @@ section {
 
 /* sign up */
 
+
 .signup-form-form, .profile-form {
   display: flex;
   justify-content: center;
+  /*background: rgba(27,27,50,0.7);*/
+  background:#292b2c;
+  border-radius: 25px;
 }
 
 .signup-form p {
@@ -119,6 +125,7 @@ section {
 
 .signup-form form {
   width: 30%;
+  color: #f7f7f7;
 }
 
 .signup-form form input {
@@ -134,7 +141,17 @@ section {
   cursor: pointer;
 }
 
-iframe{
-  width: 300px;
-  height: 300px;
+#cdcIframe, #whoIframe{
+  width: 900px;
+  height: 600px;
 }
+
+#update-form {
+  display: none;
+}
+
+/*form {*/
+/*  font-size:1.5em;*/
+/*  background: rgba(27,27,50,0.7);*/
+/*  padding:2.5em;*/
+/*}*/
